--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,6 @@ li{
 	list-style: none;	
 	display: inline;
 	padding-right: 5px;
-	padding-bottom: 5px;	 opacity: 0.5;   transition: opacity .25s ease-in-out;   -moz-transition: opacity .25s ease-in-out;   -webkit-transition: opacity .25s ease-in-out;   }   li:hover {      opacity: 1;      }
+	padding-bottom: 5px;	 opacity: 0.5;   transition: opacity .25s ease-in-out;   -moz-transition: opacity .25s ease-in-out;   -webkit-transition: opacity .25s ease-in-out;	filter: url(filters.svg#grayscale); /* Firefox 3.5+ */    filter: gray; /* IE5+ */    -webkit-filter: grayscale(1); /* Webkit Nightlies & Chrome Canary */   }   li:hover {      opacity: 1;	 filter: none;    -webkit-filter: grayscale(0);	  }
 
 	}
